Update 3.1 - Concatenating, Appending, Joining DataFrames.ipynb
Removed the SKU List example (created a separate notebook).

--- a/notebooks/3.1 - Concatenating, Appending, Joining DataFrames.ipynb
+++ b/notebooks/3.1 - Concatenating, Appending, Joining DataFrames.ipynb
@@ -362,151 +362,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Order-Item-SKU Example"
+    "## Order-Item-SKU Example - Moved to separate Notebook"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Assume that we have a dataframe with a list of orders.\n",
-    "orders = pd.DataFrame({\n",
-    "          'order' : [   123,    456,      789,    823,     950,       1024],\n",
-    "       'customer' : [ 'Jeff',  'Bob', 'Annie', 'Jeff', 'Chuck', 'Michelle']})\n",
-    "orders"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# And we have a separate dataframe with the items in each order\n",
-    "items = pd.DataFrame({\n",
-    "        'order' : [   123,    123,    123,    456,    456,    789,    823,     950,    950,   1024],\n",
-    "          'sku' : ['A109', 'A100', 'A200', 'A109', 'A227', 'A109', 'A100',  'A300', 'A904', 'A200'],\n",
-    "        'price' : [765.55, 227.83,  12.50, 665.55,  10.68, 760.00, 225.55, 2650.55,  15.22,  12.25]})\n",
-    "items"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# And we have a third dataframe with the item (SKU) information.\n",
-    "skus = pd.DataFrame({\n",
-    "      'sku' : [   'A100',    'A109',    'A200',    'A227',    'A300',    'A876',    'A904',   'A1021'],\n",
-    "    'descr' : ['Widget1', 'Widget2', 'Widget3', 'Widget4', 'Widget5', 'Widget6', 'Widget7', 'Widget8'],\n",
-    "     'cost' : [    12.50,    423.50,      6.50,      6.34,   1850.45,      3.23,      7.50,     18.55]})\n",
-    "skus"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# We'd like to join (merge) the data so that the item information can be \n",
-    "# easily combined with the order information.\n",
-    "pd.merge(orders, items)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# And now add in the item/SKU information (and save the resulting dataframe)\n",
-    "sales = pd.merge(skus, pd.merge(orders, items))\n",
-    "sales"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# now that we have the data we need, let's add a calculated column\n",
-    "sales['profit'] = sales['price'] - sales['cost']\n",
-    "sales"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Grab all my stuff ...\n",
-    "sales[sales.customer == 'Jeff']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Total the profit ... How does this work (i.e., can you explain steps?\n",
-    "# What an awesome test question this would be ... :-)).\n",
-    "sales[sales.customer == 'Jeff'].profit.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sales[sales.profit > 250]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# What if we use a left join on the second merge/join ...\n",
-    "a = pd.merge(skus, pd.merge(orders, items), how=\"left\")\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Now, suppose that we define a mask to identify those entries\n",
-    "# with no customer ...\n",
-    "pd.isna(a['customer'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ... and then apply that mask to the left-join dataset ...\n",
-    "a[pd.isna(a['customer'])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
