Added csv files
Added csv files for the orders example.

--- a/notebooks/Order List Example Using Pandas Joins.ipynb
+++ b/notebooks/Order List Example Using Pandas Joins.ipynb
@@ -211,11 +211,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reading the Data Frames from csv Files"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "customers = pd.read_csv(\"../data/orders/customers.csv\")\n",
+    "customers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "skus = pd.read_csv(\"../data/orders/skus.csv\")\n",
+    "skus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders = pd.read_csv(\"../data/orders/orders.csv\")\n",
+    "orders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items = pd.read_csv(\"../data/orders/items.csv\")\n",
+    "items"
+   ]
   }
  ],
  "metadata": {
