Added data, comments

--- a/notebooks/Order List Example Using Pandas Joins.ipynb
+++ b/notebooks/Order List Example Using Pandas Joins.ipynb
@@ -14,7 +14,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -23,17 +25,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Manually Create the DataFrames\n",
+    "See the bottom of the notebook for code that reads the DataFrames from csv files."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Customer list.  Note that this data would normally be stored in a data file (e.g., a csv file)\n",
     "# or database table.  For simplicty, we'll build it here instead:\n",
     "customers = pd.DataFrame({\n",
     "     'customer_id' : [  'C01',     'C02',        'C03',    'C04',        'C05',      'C06',     'C07',    'C08']\n",
-    "    ,  'last_name' : [ 'Smith',  'Jones',    'Johnson',  'Black',      'Green',    'Kholm',  'Tester', 'Barbra']\n",
-    "    , 'first_name' : [  'Jeff',   'Kale',       'Cara',  'Linda',     'Howard',    'Genie',    'John',  'Krock']\n",
+    "    ,  'last_name' : [ 'Smith',  'Jones',    'Johnson',  'Black',      'Green',    'Kholm',  'Tester',  'Krock']\n",
+    "    , 'first_name' : [  'Jeff',   'Kale',       'Cara',  'Linda',     'Howard',    'Genie',    'John', 'Barbra']\n",
     "    ,       'city' : ['Auburn', 'Mobile', 'Birmingham', 'Dothan', 'Greenville', 'Norcross', 'Columbus','Selina']\n",
     "    ,      'state' : [    'AL',     'AL',         'AL',     'AL',         'AL',       'GA',       'OH',    'KS']\n",
     "})\n",
@@ -43,7 +55,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# SKU List - the item (SKU) information.\n",
@@ -57,7 +71,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Order List\n",
@@ -72,7 +88,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# And we have a separate dataframe with the items in each order\n",
@@ -86,17 +104,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# First, join (merge) the customers with the orders\n",
-    "pd.merge(customers,orders)"
+    "pd.merge(customers,orders)\n",
+    "# Why not store all of this information in a single file?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# We'd like to join (merge) the data so that the item information can be \n",
@@ -107,18 +130,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# And now add in the item/SKU information (and save the resulting dataframe)\n",
-    "sales = pd.merge(skus, pd.merge(pd.merge(customers,orders), items))\n",
+    "sales = pd.merge(pd.merge(pd.merge(customers,orders), items),skus)\n",
     "sales"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# now that we have the data we need, let's add a calculated column\n",
@@ -129,7 +156,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Grab all my stuff ...\n",
@@ -139,7 +168,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Total the profit ... How does this work (i.e., can you explain steps?\n",
@@ -150,16 +181,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
+    "# All items sold with profit > 250\n",
     "sales[sales.profit > 250]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# What if we use a left join on the second merge/join ...\n",
@@ -170,7 +206,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Now, suppose that we define a mask to identify those entries\n",
@@ -181,7 +219,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# ... and then apply that mask to the left-join dataset ...\n",
@@ -192,7 +232,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# What about customers with no orders?\n",
@@ -203,11 +245,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# orders on 01/17/17\n",
     "sales[sales.order_date == '01/17/17']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# orders for SKU A227\n",
+    "sales[sales.sku == 'A227']"
    ]
   },
   {
@@ -220,7 +276,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "customers = pd.read_csv(\"../data/orders/customers.csv\")\n",
@@ -230,7 +288,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "skus = pd.read_csv(\"../data/orders/skus.csv\")\n",
@@ -240,7 +300,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "orders = pd.read_csv(\"../data/orders/orders.csv\")\n",
@@ -250,12 +312,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "items = pd.read_csv(\"../data/orders/items.csv\")\n",
     "items"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
