Added GroupBy/Aggregation Examples

--- a/notebooks/Order List Example Using Pandas Joins.ipynb
+++ b/notebooks/Order List Example Using Pandas Joins.ipynb
@@ -322,11 +322,48 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "scrolled": false
    },
+   "source": [
+    "## Aggregation and Grouping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cost and profit by Customer\n",
+    "sales.groupby('customer_id')[['cost','profit']].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Profit by SKU\n",
+    "sales.groupby('sku')[['profit']].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# By customer_id and sku\n",
+    "sales.groupby(['customer_id', 'sku'])[['profit']].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
