--- a/notebooks/Aggregation and Grouping - Another Example.ipynb
+++ b/notebooks/Aggregation and Grouping - Another Example.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "# Aggregation and Grouping - Another Example\n",
-    "The VanderPlas book/notebook uses the planets data from Seaborn.  I'm going to do another example using the tips data (I've been a waiter at two restaurants, so this one was particularly interesting!)."
+    "The VanderPlas book/notebook uses the planets data from Seaborn.  I'm going to do another example using the tips data (I've been a waiter at two restaurants, so this one was particularly interesting!).\n",
+    "\n",
+    "Video module based on this notebook: http://jsmith.co/node/256"
    ]
   },
   {
