--- a/notebooks/Order List Example Using Pandas Joins.ipynb
+++ b/notebooks/Order List Example Using Pandas Joins.ipynb
@@ -270,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reading the Data Frames from csv Files"
+    "## Reading the Data Frames from csv Files\n"
    ]
   },
   {
@@ -293,8 +293,8 @@
    },
    "outputs": [],
    "source": [
-    "skus = pd.read_csv(\"../data/orders/skus.csv\")\n",
-    "skus"
+    "orders = pd.read_csv(\"../data/orders/orders.csv\")\n",
+    "orders"
    ]
   },
   {
@@ -305,8 +305,8 @@
    },
    "outputs": [],
    "source": [
-    "orders = pd.read_csv(\"../data/orders/orders.csv\")\n",
-    "orders"
+    "skus = pd.read_csv(\"../data/orders/skus.csv\")\n",
+    "skus"
    ]
   },
   {
@@ -322,12 +322,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# re-create the sales data frame\n",
+    "sales = pd.merge(pd.merge(pd.merge(customers,orders), items),skus)\n",
+    "sales['profit'] = sales['price'] - sales['cost']\n",
+    "sales"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "scrolled": false
    },
    "source": [
-    "## Aggregation and Grouping"
+    "## Aggregation and Grouping\n",
+    "\n",
+    "Now that we have \"complete\" dataframe, we can use the aggregation and grouping functions to analyze the data.\n",
+    "\n",
+    "Reference the \"split, apply, combine\" approace from the VP book and the couse slide set"
    ]
   },
   {
@@ -356,8 +372,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Profit by State\n",
+    "sales.groupby('state')[['profit']].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# By customer_id and sku\n",
     "sales.groupby(['customer_id', 'sku'])[['profit']].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# More aggregate vales by SKU\n",
+    "sales.groupby('sku')[['profit']].aggregate(['sum', 'mean', 'median'])"
    ]
   },
   {
