--- a/notebooks/Sample Datasets.ipynb
+++ b/notebooks/Sample Datasets.ipynb
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "# Grab a data set using the key and show the first few rows\n",
-    "fkey = \"shoppers\"\n",
+    "fkey = \"usecon\"\n",
     "df = pd.read_csv(\"../data/\"+fnames[fkey])\n",
     "show(df)\n",
     "df.head()"
@@ -80,13 +80,6 @@
     "for col in df.columns:\n",
     "    print (\"{:} ({:})\".format(col,df[col].dtype))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
