Mods for Data Set 1 Material
Added data files and notebooks for the (modifiled) module for Data Set 1 and Data Preprocessing

--- a/notebooks/Pandas DataFrame and Matplotlib Example - Online Shoppers Dataset.ipynb
+++ b/notebooks/Pandas DataFrame and Matplotlib Example - Online Shoppers Dataset.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pandas and Matplotlib Example Using teh Online Shoppers Dataset\n",
+    "# Pandas DataFrame and Matplotlib Example\n",
     "## A case study about online shoppers purchasing intention\n",
     "Data Source: https://archive.ics.uci.edu/ml/datasets/Online+Shoppers+Purchasing+Intention+Dataset\n",
     "\n",
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Suppose one of your friends want to build an online shopping website, one day,  you found he seems worring about something. After talking with him, you knew he is currently have some problems when building the website:\n",
+    "### Suppose one of your friends want to build an online shopping website, one day,  you found he seems worring about something. After talking with him, you know he currently have some problems about building the website:\n",
     "#### <font color=\"blue\">1. Due to the limited budget, he wants to know which way is better: designing a good infomation page or a good product-related page.</font>\n",
     "#### <font color=\"blue\">2. He plans to have an offline promotion activity in one region, but he doesn't know which region is a better choice.</font>\n",
     "#### <font color=\"blue\">3. He also plans to have an online promotion activity during one month except the conventional monthes (Nov. and Dec.). But, he can't decide which month is better.</font>\n",
@@ -61,7 +61,7 @@
     "fname = \"../data/16_online_shoppers_purchasing_intention.csv\"\n",
     "# read the data into a pandas dataframe and show the fist five lines\n",
     "data = pd.read_csv(fname)\n",
-    "data.head()"
+    "data.head(10)"
    ]
   },
   {
