Tweaks to finish off the Matplotlib material.

--- a/notebooks/Customer Arrival Process.ipynb
+++ b/notebooks/Customer Arrival Process.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Customer Arrival Process\n",
     "\n",
-    "Here we are interested in making a visual assessment of the stationarity of the customer arrival process using a 10-day sample of customer arrival times."
+    "Here we are interested in making a visual assessment of the stationarity of the customer arrival process using a 10-day sample of customer arrival times.\n",
+    "\n",
+    "Video Module: http://jsmith.co/node/257"
    ]
   },
   {
