--- a/notebooks/4.0 Introduction to Matplotlib.ipynb
+++ b/notebooks/4.0 Introduction to Matplotlib.ipynb
@@ -330,7 +330,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# With the OO interface\n",
+    "# With the OO interface - Note that we can add/edit individual axes at any time --\n",
+    "# i.e., there is no notion of a \"current axes\" (i.e., not stateful)\n",
     "fig, ax = plt.subplots(1, 3)\n",
     "plt.tight_layout(pad=0.4, w_pad=2.0, h_pad=1.0)\n",
     "ax[0].plot(x, np.sin(x))\n",
@@ -423,10 +424,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What's going on with the plt.axis('equal') statement?\n",
+    "plt.axis?"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Other Examples"
+    "## Other Examples of Line and Scatter Plots"
    ]
   },
   {
@@ -471,7 +482,19 @@
     "    plt.plot(rng.rand(5), rng.rand(5), marker,\n",
     "             label=\"marker='{0}'\".format(marker))\n",
     "plt.legend(numpoints=1)\n",
-    "plt.xlim(0, 1.8);"
+    "plt.xlim(0, 1.8);\n",
+    "# Make sure that you can decipher the code.  Try swaping the \"for\" statments\n",
+    "# (i.e, switch the comment marker)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# what is this \"RandomState\" thing?\n",
+    "np.random.RandomState?"
    ]
   },
   {
@@ -492,34 +515,8 @@
     "plt.scatter(x, y, c=colors, s=sizes, alpha=0.3,\n",
     "            cmap='viridis')\n",
     "plt.colorbar();  # show color scale\n",
-    "# Hmmmm ... cmaps ... https://matplotlib.org/3.1.0/tutorials/colors/colormaps.html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Iris Dataset with sklearn\n",
-    "# http://scikit-learn.org/stable/modules/generated/sklearn.datasets.load_iris.html#sklearn.datasets.load_iris\n",
-    "from sklearn.datasets import load_iris\n",
-    "iris = load_iris()\n",
-    "features = iris.data.T\n",
-    "\n",
-    "plt.scatter(features[0], features[1], alpha=0.2,\n",
-    "            s=100*features[3], c=iris.target, cmap='viridis')\n",
-    "plt.xlabel(iris.feature_names[0])\n",
-    "plt.ylabel(iris.feature_names[1]);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iris.keys()"
+    "# Hmmmm ... cmaps ... https://matplotlib.org/3.1.0/tutorials/colors/colormaps.html\n",
+    "# Make sure that you understand what's going on here - i.e., what is x?  y?  colors? sizes?"
    ]
   },
   {
@@ -532,6 +529,44 @@
     "The famous Iris database, first used by Sir R.A Fisher  This is perhaps the best known database to be found in the pattern recognition literature.  Fisher\\'s paper is a classic in the field and is referenced frequently to this day.  (See Duda & Hart, for example.)  The data set contains 3 classes of 50 instances each, where each class refers to a type of iris plant.  One class is linearly separable from the other 2; the latter are NOT linearly separable from each other.  \n",
     "\n",
     "References ----------    - Fisher,R.A. \"The use of multiple measurements in taxonomic problems\"      Annual Eugenics, 7, Part II, 179-188 (1936); also in \"Contributions to      Mathematical Statistics\" (John Wiley, NY, 1950).    - Duda,R.O., & Hart,P.E. (1973) Pattern Classification and Scene Analysis.      (Q327.D83) John Wiley & Sons.  ISBN 0-471-22361-1.  See page 218.    - Dasarathy, B.V. (1980) \"Nosing Around the Neighborhood: A New System      Structure and Classification Rule for Recognition in Partially Exposed      Environments\".  IEEE Transactions on Pattern Analysis and Machine      Intelligence, Vol. PAMI-2, No. 1, 67-71.    - Gates, G.W. (1972) \"The Reduced Nearest Neighbor Rule\".  IEEE Transactions      on Information Theory, May 1972, 431-433.    - See also: 1988 MLC Proceedings, 54-64.  Cheeseman et al\"s AUTOCLASS II      conceptual clustering system finds 3 classes in the data.    - Many, many more ... '"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Same type of plot as above, except using some real, non-random data.\n",
+    "#\n",
+    "# Iris Dataset with sklearn\n",
+    "# http://scikit-learn.org/stable/modules/generated/sklearn.datasets.load_iris.html#sklearn.datasets.load_iris\n",
+    "from sklearn.datasets import load_iris\n",
+    "iris = load_iris()\n",
+    "features = iris.data.T\n",
+    "\n",
+    "plt.scatter(features[0], features[1], alpha=0.2,\n",
+    "            s=100*features[3], c=iris.target, cmap='viridis')\n",
+    "plt.xlabel(iris.feature_names[0])\n",
+    "plt.ylabel(iris.feature_names[1]);\n",
+    "plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# So what is iris (the data type)\n",
+    "type(iris), iris.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Histograms"
    ]
   },
   {
@@ -559,8 +594,9 @@
     "\n",
     "plt.hist(x1, **kwargs)\n",
     "plt.hist(x2, **kwargs)\n",
-    "fig = plt.hist(x3, **kwargs)\n",
-    "# What are **kwargs?"
+    "fig = plt.hist(x3, **kwargs);\n",
+    "# What are these **kwargs things?\n",
+    "# Why the \"fig=\" on the last function call?"
    ]
   },
   {
@@ -584,10 +620,10 @@
    "outputs": [],
    "source": [
     "# Subplots in action\n",
-    "# erv.csv data - a (100x15 matrix of floats)\n",
-    "# 15 cols -- 15 subplots in a 3x5 grid)\n",
+    "# erv.csv data - a 100x15 matrix of floats - a text file\n",
+    "# 15 cols \n",
     "erv = np.genfromtxt('..\\data\\erv.csv', delimiter=',')\n",
-    "# or with color\n",
+    "# Create 15 subplots in a 3x5 gridor witha color for each\n",
     "c = ['orange', 'green', 'red', 'beige', 'brown'\n",
     "    ,'dimgray', 'firebrick', 'darkkhaki', 'indigo', 'darksalmon'\n",
     "    ,'forestgreen', 'fuchsia', 'darkcyan', 'darkviolet','darkgoldenrod'\n",
@@ -596,7 +632,19 @@
     "for j in range(15):\n",
     "    plt.subplot(3,5,j+1)\n",
     "    plt.hist(erv[:,j], color=c[j])\n",
-    "plt.show()"
+    "plt.show()\n",
+    "# Make sure that you understand how the indexer (j) is\n",
+    "# being used here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.genfromtxt()?????\n",
+    "np.genfromtxt?"
    ]
   },
   {
@@ -621,6 +669,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# More annotations\n",
     "fig, ax = plt.subplots()\n",
     "\n",
     "x = np.linspace(0, 20, 1000)\n",
@@ -649,12 +698,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Facets\n",
+    "# Facets - Prep the data first\n",
     "tips = sns.load_dataset('tips')\n",
     "tips['tip_pct'] = 100 * tips['tip'] / tips['total_bill']\n",
-    "\n",
-    "grid = sns.FacetGrid(tips, row=\"sex\", col=\"time\", margin_titles=True)\n",
-    "grid.map(plt.hist, \"tip_pct\", bins=np.linspace(0, 40, 15));"
+    "tips.head()"
    ]
   },
   {
@@ -663,7 +710,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tips.head()"
+    "# Create the plot\n",
+    "grid = sns.FacetGrid(tips, row=\"sex\", col=\"time\", margin_titles=True)\n",
+    "grid.map(plt.hist, \"tip_pct\", bins=np.linspace(0, 40, 15));"
    ]
   },
   {
@@ -688,7 +737,9 @@
     "y = np.cumsum(rng.randn(500, 6), 0)\n",
     "plt.figure(figsize=(10,7))\n",
     "plt.plot(x, y)\n",
-    "plt.legend('ABCDEF', ncol=2, loc='upper left');"
+    "plt.legend('ABCDEF', ncol=2, loc='upper left');\n",
+    "# Note that we are making a single 'plot' call here, but are\n",
+    "# passing a 1-D array (x) and a 2-D array (y) "
    ]
   },
   {
@@ -741,6 +792,13 @@
     "with sns.axes_style('white'):\n",
     "    sns.jointplot(\"x\", \"y\", data, kind='kde');"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
