--- a/notebooks/NSPP ObservationGenerator.ipynb
+++ b/notebooks/NSPP ObservationGenerator.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# NSPP Generator\n",
     "\n",
-    "Generate observations of a non-stationary Poisson Process -- like arrivals to a customer-centered system."
+    "Generate observations of a non-stationary Poisson Process -- like arrivals to a customer-centered system.\n",
+    "\n",
+    "Video module: http://jsmith.co/node/257"
    ]
   },
   {
@@ -242,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
