Updated for Data Set 1

--- a/notebooks/4.0 Introduction to Matplotlib.ipynb
+++ b/notebooks/4.0 Introduction to Matplotlib.ipynb
@@ -419,7 +419,7 @@
     "# Note the difference when you comment out the \"axis equal\" statement\n",
     "plt.plot(x, np.sin(x), '-g', label='sin(x)')\n",
     "plt.plot(x, np.cos(x), ':b', label='cos(x)')\n",
-    "plt.axis('equal')\n",
+    "#plt.axis('equal')\n",
     "plt.legend();"
    ]
   },
@@ -594,9 +594,18 @@
     "\n",
     "plt.hist(x1, **kwargs)\n",
     "plt.hist(x2, **kwargs)\n",
-    "fig = plt.hist(x3, **kwargs);\n",
+    "fig=plt.hist(x3, **kwargs)\n",
     "# What are these **kwargs things?\n",
     "# Why the \"fig=\" on the last function call?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist?"
    ]
   },
   {
