--- a/notebooks/Pandas DataFrame and Matplotlib Example.ipynb
+++ b/notebooks/Pandas DataFrame and Matplotlib Example.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Suppose one of your friends want to build an online shopping website, one day,  you found he seems worring about something. After talking with him, you know he currently have some problems about building the website:\n",
+    "### Suppose one of your friends want to build an online shopping website, one day,  you found he seems worring about something. After talking with him, you knew he is currently have some problems when building the website:\n",
     "#### <font color=\"blue\">1. Due to the limited budget, he wants to know which way is better: designing a good infomation page or a good product-related page.</font>\n",
     "#### <font color=\"blue\">2. He plans to have an offline promotion activity in one region, but he doesn't know which region is a better choice.</font>\n",
     "#### <font color=\"blue\">3. He also plans to have an online promotion activity during one month except the conventional monthes (Nov. and Dec.). But, he can't decide which month is better.</font>\n",
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's import the tools at first and then read teh data as a dataframe using Pandas"
+    "### Let's import the tools at first and then read the data as a dataframe using Pandas"
    ]
   },
   {
@@ -58,10 +58,10 @@
    "outputs": [],
    "source": [
     "# the file path\n",
-    "fname = \"../data/16_online_shoppers_purchasing_intention.csv\"\n",
+    "fname = \"16_online_shoppers_purchasing_intention.csv\"\n",
     "# read the data into a pandas dataframe and show the fist five lines\n",
-    "data = pd.read_csv(fname)\n",
-    "data.head(10)"
+    "data = pd.read_csv(\"../data/\" + fname)\n",
+    "data.head()"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now, let's use this dataset to find some useful information. Let's check the average, min, max and std on time shoppers spend in informational page and product-related page."
+    "### Now, let's use this dataset to find some useful information. Let's check the average, min, max and sample std on time shoppers spend in informational page and product-related page."
    ]
   },
   {
@@ -166,8 +166,8 @@
     "# The number of shoppers in other regions end up buying something\n",
     "regiono_shopper_b = data[(data['Region'] != 1) & (data['Revenue'] == True)]['Index'].size\n",
     "\n",
-    "print(\"There is {:0.2f} percent of shoppers in region1 buy products\".format(region1_shopper_b/region1_shopper_a))\n",
-    "print(\"There is {:0.2f} percent of shoppers in other regions(not region1) buy products\".format(regiono_shopper_b/regiono_shopper_a))"
+    "print(\"There is {:0.2f} of shoppers in region1 buy products\".format(region1_shopper_b/region1_shopper_a))\n",
+    "print(\"There is {:0.2f} of shoppers in other regions(not region1) buy products\".format(regiono_shopper_b/regiono_shopper_a))"
    ]
   },
   {
@@ -211,6 +211,15 @@
     "        autopct='%1.1f%%', shadow=True, startangle=30) \n",
     "ax2.set_title(\"other regions\");\n",
     "# the semicolon is used to suppress the returned values from calling matplotlib functions. You can remove it to check what will heppen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.pie(region1_sizes);"
    ]
   },
   {
