Renamed Two Example Notebooks

--- a/notebooks/Numpy Example - Foreign Exchange Rate Data.ipynb
+++ b/notebooks/Numpy Example - Foreign Exchange Rate Data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Numpy Example\n",
+    "# Numpy Example - Foreign Exchange Rate Data\n",
     "## A Simple Case Study About Vacation Decision\n",
     "Datafile: \"14_Foreign_Exchange_Rates_PureNumeric.csv.csv\""
    ]
