--- a/notebooks/Pandas DataFrame and Matplotlib Example - Online Shoppers Data.ipynb
+++ b/notebooks/Pandas DataFrame and Matplotlib Example - Online Shoppers Data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pandas DataFrame and Matplotlib Example\n",
+    "# Pandas DataFrame and Matplotlib Example - Online Shoppers Data\n",
     "## A case study about online shoppers purchasing intention\n",
     "Data Source: https://archive.ics.uci.edu/ml/datasets/Online+Shoppers+Purchasing+Intention+Dataset\n",
     "\n",
