Update Numpy Example - Foreign Exchange Rate Data.ipynb
Fixed a file path problem.

--- a/notebooks/Numpy Example - Foreign Exchange Rate Data.ipynb
+++ b/notebooks/Numpy Example - Foreign Exchange Rate Data.ipynb
@@ -240,7 +240,7 @@
     "# Define a list for the data.  Will be a list of lists.\n",
     "data = []\n",
     "# open the file\n",
-    "fname = \"../../data/14_Foreign_Exchange_Rates_PureNumeric.csv\"\n",
+    "fname = \"../data/14_Foreign_Exchange_Rates_PureNumeric.csv\"\n",
     "f = open(fname, \"r\")\n",
     "# ignore the first 1 lines\n",
     "for i in range(2):\n",
