Added bundles data set
Bundles dataset.

--- a/code/R/Notebook With Other Languages.Rmd
+++ b/code/R/Notebook With Other Languages.Rmd
@@ -12,7 +12,7 @@ print(my_str)
 
 ```
 
-Try a Plot -- check out the cool swtiching between plot and console views.
+Try a Plot -- check out the cool switching between plot and console views.
 
 ```{r}
 require(tidyverse)
