Prepping for Fall 2021 Class
Removing the MySQL-related files and homework assignment files.

--- a/notebooks/0.0 Course Title and Information.ipynb
+++ b/notebooks/0.0 Course Title and Information.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# INSY 6500 - Modern Tools for Data Science\n",
+    "# INSY 6500/5500 - Modern Tools for Data Science\n",
     "\n",
-    "## Current course offering : Fall 2020\n",
+    "## Current course offering : Fall 2021\n",
     "\n",
     "<b>Jeffrey S. Smith</b>\n",
     "<br>Joe W. Forehand Professor\n",
@@ -44,6 +44,7 @@
     "<br>(subect to change based on course progress)\n",
     "<ol>\n",
     "<li>Course introduction, technology toolkit\n",
+    "<li>Introduction to Data Analytics and Modeling\n",
     "<li>Introduction to Python\n",
     "<li>Python Programming Basics\n",
     "<li>Python – Numpy, SciPy\n",
@@ -54,11 +55,8 @@
     "<li>R Basics\n",
     "<li>Data Handling with R Data Frames\n",
     "<li>Data Visualization and Exploratory Data Analysis (EDA)\n",
-    "<li>Sample Data Sets 2\n",
-    "<li>Relational Databases\n",
-    "<li>Relational Databases\n",
-    "<li>Integration\n",
-    "<li>Integration\n",
+    "<li>Modeling\n",
+    "<li>Modeling\n",
     "</ol>"
    ]
   },
@@ -86,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
