--- a/notebooks/0.1 Course Toolkit and Reference Materials.ipynb
+++ b/notebooks/0.1 Course Toolkit and Reference Materials.ipynb
@@ -35,7 +35,6 @@
     "    <li />Installing Software - General Guidelines/Suggestions - http://jsmith.co/node/245\n",
     "    <li />Installing Anaconda Python in Our Environment - http://jsmith.co/node/245\n",
     "    <li />Installing R in Our Environment - http://jsmith.co/node/247\n",
-    "    <li />Installing MariaDB (MySQL) in Our Environment - http://jsmith.co/node/248\n",
     "    <li />Uinsg GitHub in Our Class - http://jsmith.co/node/249\n",
     "</ul>\n",
     "    \n",
@@ -63,7 +62,7 @@
    "metadata": {},
    "source": [
     "## Python\n",
-    "We will use Python 3.7.x for this course.  When downloading and installing related pacakges, please make sure that you have the 3.7.x versions and not the 2.7.y versions.  We recommend that youu use the Anaconda Python package (https://www.anaconda.com/download/) -- this is the package that will be installed in the labs.  The standard installation includes most of Python-related packages that we will use in the class and other packages can be easily installed and managed using the Conda package manager (https://conda.io/docs/).  Information about using <em>environments</em> (which let you have different versions of Python and packages installed on the same computer) can be found at https://conda.io/docs/user-guide/tasks/manage-environments.html.\n",
+    "We will use Python 3.8.x for this course (if you already have a 3.y.x version installed, that will be sufficient).  When downloading and installing related pacakges, please make sure that you have the 3.y.x versions and not the 2.7.y versions.  We recommend that youu use the Anaconda Python package (https://www.anaconda.com/download/) -- this is the package that will be installed in the labs.  The standard installation includes most of Python-related packages that we will use in the class and other packages can be easily installed and managed using the Conda package manager (https://conda.io/docs/).  Information about using <em>environments</em> (which let you have different versions of Python and packages installed on the same computer) can be found at https://conda.io/docs/user-guide/tasks/manage-environments.html.\n",
     "\n",
     "The following sections briefly describe the major Python modules that we will use in class.\n",
     "\n",
@@ -71,31 +70,22 @@
     "\n",
     "(installed as part of the standard Anaconda installation)\n",
     "\n",
-    "\n",
     "### NumPy\n",
     "\n",
     "(installed as part of the standard Anaconda installation)\n",
-    "\n",
     "\n",
     "\n",
     "### Pandas\n",
     "\n",
     "(installed as part of the standard Anaconda installation)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "### Matplotlib\n",
     "\n",
     "(installed as part of the standard Anaconda installation)\n",
     "\n",
-    "### Python MySQL Connector\n",
+    "### Scikit-learn\n",
     "\n",
-    "Available at: https://dev.mysql.com/downloads/connector/python/\n",
-    "If you have the standard Anaconda installation, you can install the connector using the command:\n",
-    "<code>conda install mysql-connector-python</code> from an Anaconda CMD prompt.\n",
-    "\n",
-    "\n"
+    "Tools for predictive data analysis"
    ]
   },
   {
@@ -105,21 +95,6 @@
     "## R\n",
     "\n",
     "We will use a \"current\" version of R for this course.  I currently have version 3.5.1 installed on my computer, but I recommend that you install the latest stable version (a list of R mirror sites is available at https://cran.r-project.org/mirrors.html).  We will also make significant use of the packages that comprise the Tidyverse (https://tidyverse.org).\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## MySQL/MariaDB"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For our database work, we will use either MariaDB (https://mariadb.org/) or MySQL (https://www.mysql.com/).  For the material\n",
-    "that we cover in our class, both should work equally well (MariaDB is a fork from MySQL)."
    ]
   },
   {
@@ -146,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
