--- a/notebooks/1.0 Intro to Python.ipynb
+++ b/notebooks/1.0 Intro to Python.ipynb
@@ -31,7 +31,7 @@
     "<li />Pandas\n",
     "<li />SciPy\n",
     "<li />Matplotlib and Seaborn\n",
-    "<li />Python MySQL Connector\n",
+    "<li />Scikit-learn\n",
     "</ul>\n",
     "In addition, we will also learn how to create and use our own modules.\n"
    ]
@@ -45,9 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\GitHub\\ToolsForDataAnalyticsAndModeling\\notebooks\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "print(os.getcwd())"
@@ -55,18 +63,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
    "source": [
     "print (\"Hello World!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] Hello World!\n",
+      "[2] Hello World!\n",
+      "[3] Hello World!\n",
+      "[4] Hello World!\n",
+      "[5] Hello World!\n"
+     ]
+    }
+   ],
    "source": [
     "# Unlike many languages that use {} and other start/end identifers\n",
     "#   to identify blocks, Python uses intention.  \n",
@@ -77,9 +105,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(20):\n",
     "    if i % 2:\n",
