--- a/notebooks/SKU List Data Structure Example.ipynb
+++ b/notebooks/SKU List Data Structure Example.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "Below, we illustrate the use three different data structures to store the data and illustrate some basic querying of the data.  Note how the format of the object creation statements improves the \"understandability\" of the data structures.\n",
     "\n",
-    "See http://jsmith.co/node/251 for a video module based on this example."
+    "See https://jsmith.co/educational-modules/analytics-course-modules/python-related-videos/ for a video module based on this example."
    ]
   },
   {
@@ -283,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
